WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
214263
Crash under WebKit::LaunchServicesDatabaseManager::didConnect()
https://bugs.webkit.org/show_bug.cgi?id=214263
Summary
Crash under WebKit::LaunchServicesDatabaseManager::didConnect()
Per Arne Vollan
Reported
2020-07-13 10:30:55 PDT
There is a crash under WebKit::LaunchServicesDatabaseManager::didConnect() when trying to send a message to an invalid connection.
Attachments
Patch
(2.94 KB, patch)
2020-07-13 10:33 PDT
,
Per Arne Vollan
no flags
Details
Formatted Diff
Diff
Patch
(1.73 KB, patch)
2020-07-13 10:36 PDT
,
Per Arne Vollan
darin
: review+
Details
Formatted Diff
Diff
Patch
(1.75 KB, patch)
2020-07-13 11:34 PDT
,
Per Arne Vollan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Per Arne Vollan
Comment 1
2020-07-13 10:33:56 PDT
Created
attachment 404154
[details]
Patch
Per Arne Vollan
Comment 2
2020-07-13 10:36:31 PDT
Created
attachment 404155
[details]
Patch
Darin Adler
Comment 3
2020-07-13 10:52:21 PDT
Comment on
attachment 404155
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=404155&action=review
> Source/WebKit/WebProcess/cocoa/LaunchServicesDatabaseManager.mm:70 > + auto conn = connection();
WebKit coding style says: auto connection = this->connection();
Per Arne Vollan
Comment 4
2020-07-13 11:34:08 PDT
Created
attachment 404161
[details]
Patch
Per Arne Vollan
Comment 5
2020-07-13 11:34:43 PDT
(In reply to Darin Adler from
comment #3
)
> Comment on
attachment 404155
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=404155&action=review
> > > Source/WebKit/WebProcess/cocoa/LaunchServicesDatabaseManager.mm:70 > > + auto conn = connection(); > > WebKit coding style says: > > auto connection = this->connection();
Fixed. Thanks for reviewing!
EWS
Comment 6
2020-07-13 12:13:09 PDT
Committed
r264309
: <
https://trac.webkit.org/changeset/264309
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 404161
[details]
.
Radar WebKit Bug Importer
Comment 7
2020-07-13 12:14:15 PDT
<
rdar://problem/65492080
>
Per Arne Vollan
Comment 8
2020-07-13 12:35:42 PDT
***
Bug 214200
has been marked as a duplicate of this bug. ***
Ryan Haddad
Comment 9
2020-07-13 12:42:11 PDT
***
Bug 214227
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug