Crash under WebKit::LaunchServicesDatabaseManager::didConnect() https://bugs.webkit.org/show_bug.cgi?id=214263

Reviewed by Darin Adler.

There is a crash under WebKit::LaunchServicesDatabaseManager::didConnect() when trying to send a message to an invalid connection.

No new tests, since I have not been able to reproduce.

* WebProcess/cocoa/LaunchServicesDatabaseManager.mm:
(WebKit::LaunchServicesDatabaseManager::didConnect):


Canonical link: https://commits.webkit.org/227073@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@264309 268f45cc-cd09-0410-ab3c-d52691b4dbfc